# dokli

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: python-package.yml
dokli/: __init__.py  __main__.py  api_client.py  api_commands_config.py  cli.py  commands.py  config.py  dokploy.py  formatting.py  openapi_cli.py
dokli/models/: __init__.py  compose.py  deployment.py  project.py  redis.py
dokli/tui/: __init__.py  app.py  forms.py
dokli/tui/asciiart/: dokploy-logo-notext.txt  dokploy-logo-textonly.txt  dokploy-logo.txt
dokli/tui/css/: tui.css
dokli/tui/screens/: connection.py  connections.py  docker.py  project.py  projects.py
dokli/tui/widgets/: __init__.py  list_item.py  main_menu.py
dokploy/: README.md  example.py  pyproject.toml  settings.getOpenApiDocument.json  setup.py
dokploy/.openapi-generator/: FILES
dokploy/docs/: AdminApi.md  AdminAssignPermissionsRequest.md  AdminCreateUserInvitationRequest.md  AdminOneDefaultResponse.md  AdminOneDefaultResponseIssuesInner.md  AdminRemoveUserRequest.md  ApplicationApi.md  ApplicationCreateRequest.md  ApplicationDeleteRequest.md  ApplicationReloadRequest.md  ApplicationSaveBuildTypeRequest.md  ApplicationSaveDockerProviderRequest.md  ApplicationSaveEnvironmentRequest.md  ApplicationSaveGitProdiverRequest.md  ApplicationSaveGithubProviderRequest.md  ApplicationUpdateRequest.md  ApplicationUpdateRequestHealthCheckSwarm.md  ApplicationUpdateRequestModeSwarm.md  ApplicationUpdateRequestModeSwarmReplicated.md  ApplicationUpdateRequestModeSwarmReplicatedJob.md  ApplicationUpdateRequestNetworkSwarmInner.md  ApplicationUpdateRequestPlacementSwarm.md  ApplicationUpdateRequestPlacementSwarmPlatformsInner.md  ApplicationUpdateRequestPlacementSwarmPreferencesInner.md  ApplicationUpdateRequestPlacementSwarmPreferencesInnerSpread.md  ApplicationUpdateRequestRestartPolicySwarm.md  ApplicationUpdateRequestUpdateConfigSwarm.md  ApplicationUpdateTraefikConfigRequest.md  AuthApi.md  AuthCreateAdminRequest.md  AuthCreateUserRequest.md  AuthUpdateByAdminRequest.md  AuthUpdateRequest.md  AuthVerify2FASetupRequest.md  AuthVerifyLogin2FARequest.md  BackupApi.md  BackupCreateRequest.md  BackupRemoveRequest.md  BackupUpdateRequest.md  CertificatesApi.md  (+114 more)
dokploy/openapi_client/: __init__.py  api_client.py  api_response.py  configuration.py  exceptions.py  rest.py
dokploy/openapi_client/api/: __init__.py  admin_api.py  application_api.py  auth_api.py  backup_api.py  certificates_api.py  cluster_api.py  compose_api.py  deployment_api.py  destination_api.py  docker_api.py  domain_api.py  mariadb_api.py  mongo_api.py  mounts_api.py  mysql_api.py  notification_api.py  port_api.py  postgres_api.py  project_api.py  redirects_api.py  redis_api.py  registry_api.py  security_api.py  settings_api.py  ssh_key_api.py  user_api.py
dokploy/openapi_client/models/: __init__.py  admin_assign_permissions_request.py  admin_create_user_invitation_request.py  admin_one_default_response.py  admin_one_default_response_issues_inner.py  admin_remove_user_request.py  application_create_request.py  application_delete_request.py  application_reload_request.py  application_save_build_type_request.py  application_save_docker_provider_request.py  application_save_environment_request.py  application_save_git_prodiver_request.py  application_save_github_provider_request.py  application_update_request.py  application_update_request_health_check_swarm.py  application_update_request_mode_swarm.py  application_update_request_mode_swarm_replicated.py  application_update_request_mode_swarm_replicated_job.py  application_update_request_network_swarm_inner.py  application_update_request_placement_swarm.py  application_update_request_placement_swarm_platforms_inner.py  application_update_request_placement_swarm_preferences_inner.py  application_update_request_placement_swarm_preferences_inner_spread.py  application_update_request_restart_policy_swarm.py  application_update_request_update_config_swarm.py  application_update_traefik_config_request.py  auth_create_admin_request.py  auth_create_user_request.py  auth_update_by_admin_request.py  auth_update_request.py  auth_verify2_fa_setup_request.py  auth_verify_login2_fa_request.py  backup_create_request.py  backup_remove_request.py  (+94 more)
dokploy/test/: test_admin_api.py  test_admin_assign_permissions_request.py  test_admin_create_user_invitation_request.py  test_admin_one_default_response.py  test_admin_one_default_response_issues_inner.py  test_admin_remove_user_request.py  test_application_api.py  test_application_create_request.py  test_application_delete_request.py  test_application_reload_request.py  test_application_save_build_type_request.py  test_application_save_docker_provider_request.py  test_application_save_environment_request.py  test_application_save_git_prodiver_request.py  test_application_save_github_provider_request.py  test_application_update_request.py  test_application_update_request_health_check_swarm.py  test_application_update_request_mode_swarm.py  test_application_update_request_mode_swarm_replicated.py  test_application_update_request_mode_swarm_replicated_job.py  test_application_update_request_network_swarm_inner.py  test_application_update_request_placement_swarm.py  test_application_update_request_placement_swarm_platforms_inner.py  test_application_update_request_placement_swarm_preferences_inner.py  test_application_update_request_placement_swarm_preferences_inner_spread.py  test_application_update_request_restart_policy_swarm.py  test_application_update_request_update_config_swarm.py  test_application_update_traefik_config_request.py  test_auth_api.py  test_auth_create_admin_request.py  test_auth_create_user_request.py  test_auth_update_by_admin_request.py  test_auth_update_request.py  test_auth_verify2_fa_setup_request.py  test_auth_verify_login2_fa_request.py  test_backup_api.py  test_backup_create_request.py  test_backup_remove_request.py  test_backup_update_request.py  test_certificates_api.py  (+114 more)
tests/: test_cli.py  test_config.py
(+11 files in other folders)
